Bug 1619317, ensure we set isWow64 to the correct value after taking it off the main thread r=aklotz

Differential Revision: https://phabricator.services.mozilla.com/D65127

--HG--
extra : moz-landing-system : lando